# smart-health-checkin-mdoc

./: .gitignore  CONTEXT.md  OPEN-QUESTIONS.md  PLAN.md  PROTOCOL-EXPLAINER.md  README.md  SMART-HEALTH-CHECKIN-REQUEST-RESPONSE.md  explainer.html  index.html  plan-exercise-trust.md  wire-protocol.html
.github/workflows/: deploy-pages.yml
archive/: README.md
capture/: README.md  capture-dc-request.mjs  capture-output.json  probe-browser-branching.mjs
docs/: CONTEXT.md  PLAN.md  PROTOCOL-EXPLAINER.md  SMART-HEALTH-CHECKIN-REQUEST-RESPONSE.md
docs/archive/: README.md
fixtures/: README.md
fixtures-tool/: README.md
issues/: 2026-05-01-followup.md  2026-05-01-implementation-review.md
matcher/: README.md  build.sh
matcher-c/: .gitignore  README.md  build.sh  c_yes_matcher.c  smart_icon_96_png.h
profiles/: README.md  org-iso-mdoc.md
research/: 01-dc-api-overview.md  03-matcher-wasm-abi.md  04-mdoc-response.md  05-encryption-handover.md  07-smart-checkin-on-mdoc.md  08-ts-verifier-architecture.md  09-pymdoc-cbor-grounding-strategy.md  sources.md
rp-web/: README.md  creator.html  index.html  instant.perms.test.ts  instant.perms.ts  instant.schema.ts  package.json  submit.html  tsconfig.json
scripts/: build-pages.sh  clean-generated.sh  generate-llms-txt.mjs  pull-android-handler-run.sh  serve-pages.sh  serve-static.mjs
site/: explainer-copilot.html  explainer.html  index.html  kiosk-flow-explainer.html  kiosk.html  smart-model-explainer.html  wire-protocol-explainer.html  wire-protocol-inspector.html  wire-protocol.html
tools/: README.md
tools/fixtures-tool/: README.md  pyproject.toml
tools/fixtures-tool/src/fixtures_tool/: __init__.py  checkin.py
tools/fixtures-tool/tests/: test_checkin_fixture.py
wallet-android/: .gitignore  README.md  build.gradle  settings.gradle
wallet-android/app/matcher/: Cargo.toml  README.md
wallet-android/app/matcher/assets/: build-icon.ts
wallet-android/app/matcher/src/: bindings.rs  lib.rs
(+289 files in other folders)
