[project]
name = "shc-mdoc-fixtures-tool"
version = "0.1.0"
description = "Developer-only fixtures and pyMDOC-CBOR grounding tools for SMART Health Check-in mdoc."
requires-python = ">=3.12,<3.13"
dependencies = [
  "cryptography>=46.0.3",
  "pymdoccbor @ git+https://github.com/IdentityPython/pyMDOC-CBOR.git@1.3.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
